--- a/nav-project/style.css
+++ b/nav-project/style.css
@@ -106,6 +106,7 @@ a:hover{
     .social-icons-toggle{
         transform: translateX(0%);
     }
+    
     .nav-links{
         position: absolute;
         left: 0;
@@ -116,7 +117,7 @@ a:hover{
         justify-content: start;
          transform: translatex(-100%); 
         transition: transform 0.5s ease-in-out; 
-        width: 30%;
+        width: 40%;
     }
     li{
         padding: 10px 0;
@@ -124,9 +125,9 @@ a:hover{
         padding-left: 15PX;
 
     }
-    li:hover{
+    /* li:hover{
         background-color: antiquewhite;
-    }
+    } */
     .burger{
         display: inline-block;
         cursor: pointer;
@@ -144,5 +145,8 @@ a:hover{
     .rotate .link3{
         transform: rotate(45deg) translate(-8px,-6px);
         
+    }
+    .social-icons-toggle:hover{
+        background-color: transparent;
     }
 }
