--- a/model/style.css
+++ b/model/style.css
@@ -56,7 +56,7 @@ body {
     background-color: white;
     display: flex;
     align-items: center;
-    transform: translateX(-450%);
+    opacity: 0;
 }
 .header{
     width: 100%;
@@ -86,5 +86,5 @@ button{
     letter-spacing: 3px;
 }
 .toggle .two{
-    transform: translateX(0%);
+    opacity: 1;
 }
