--- a/Model-Project/style.css
+++ b/Model-Project/style.css
@@ -1,7 +1,7 @@
 body {
-    background-image:url(https://images.pexels.com/photos/39284/macbook-apple-imac-computer-39284.jpeg?auto=compress&cs=tinysrgb&w=600);
-    background-repeat: no-repeat;
-    background-size: cover;      
+    background-image:url(https://raw.githubusercontent.com/john-smilga/javascript-basic-projects/master/06-modal/final/hero.jpeg);
+    background-repeat: repeat;
+    background-size:cover; 
 }
 .modal{
 
@@ -87,7 +87,8 @@ button{
 }
 
 .changeBackgroud {
-    background-image: linear-gradient(rgba(73,166,233,0.6),rgba(73,166,233,0.6)), url(https://images.pexels.com/photos/39284/macbook-apple-imac-computer-39284.jpeg?auto=compress&cs=tinysrgb&w=600);
+    background-image: linear-gradient(rgba(73,166,233,0.6),rgba(73,166,233,0.6)), url(https://raw.githubusercontent.com/john-smilga/javascript-basic-projects/master/06-modal/final/hero.jpeg
+    );
     background-repeat: repeat;
     background-size: cover;    
 }
