--- a/Model-Project/style.css
+++ b/Model-Project/style.css
@@ -1,7 +1,50 @@
-body {
-    background-image:url(https://raw.githubusercontent.com/john-smilga/javascript-basic-projects/master/06-modal/final/hero.jpeg);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+main {
+    background-image: linear-gradient(rgba(73,166,233,0.6),rgba(73,166,233,0.6)), url(./model.jpg);
     background-repeat: repeat;
-    background-size:cover; 
+    background-size: cover; 
+    height: 90vh; 
+    width: 100%;
+}
+header{
+    width: 100%;
+    height: 10vh;
+    background-color: aqua;
+}
+nav{
+    height: 10vh;
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav ul{
+    display: flex;
+    width: 300px;
+    justify-content: space-between;
+    align-items: center;
+}
+nav li{
+    list-style: none;
+}
+nav a{
+    font-size: 22px;
+    color: red;
+}
+.button-div{
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .modal{
 
@@ -19,6 +62,7 @@ body {
     align-items: center;
     width: 500px;
     height: 250px;
+    display: none;
 }
 .model-header{
     margin-top:60px;
@@ -29,7 +73,6 @@ body {
 }  
 
 .modal-btn{
-    margin-top: 35px;
     background-color: rgb(73, 166, 233);
     border: none;
     padding: 8px 15px;
@@ -52,7 +95,6 @@ body {
     background-color: white;
     display: flex;
     align-items: center;
-    display: none;
 }
 .header{
     width: 100%;
@@ -87,8 +129,5 @@ button{
 }
 
 .changeBackgroud {
-    background-image: linear-gradient(rgba(73,166,233,0.6),rgba(73,166,233,0.6)), url(https://raw.githubusercontent.com/john-smilga/javascript-basic-projects/master/06-modal/final/hero.jpeg
-    );
-    background-repeat: repeat;
-    background-size: cover;    
+   
 }
