--- a/Model-Project/style.css
+++ b/Model-Project/style.css
@@ -10,8 +10,9 @@ main {
     background-image: linear-gradient(rgba(73,166,233,0.6),rgba(73,166,233,0.6)), url(./model.jpg);
     background-repeat: repeat;
     background-size: cover; 
-    height: 90vh; 
+    height: 88vh; 
     width: 100%;
+    position: relative;
 }
 header{
     width: 100%;
@@ -62,4 +63,46 @@ nav{
     background-color: transparent;
     border: 3px rgb(73, 166, 233) solid;
     color: rgb(73, 166, 233);
+}
+
+.model{
+    width: 500px;
+    height: 230px;
+    background: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.header{
+    width: 100%;
+    background-color: red;
+    height: 35px;
+    display: flex;
+    justify-content: flex-end;
+}
+.cancel{
+    background-color: transparent;
+    border: none;
+     color:white;
+     font-size: 25px;
+     margin-right: 15px;
+}
+.like{
+    margin: 20px 0;
+}
+.good{
+    margin-left: 0px;
+}
+@media screen and (max-width: 1050px) { 
+    main{
+        height: 85vh;
+    }
+    .button-div{
+        height: 12vh;
+    }
 }
