--- a/Model-Project/style.css
+++ b/Model-Project/style.css
@@ -36,15 +36,32 @@ nav{
 .links li{
     list-style: none;
 }
-.a{
-    color: red;
+.links li a{
+    text-decoration: none;
+    font-size: 18px;
+    letter-spacing: 3px;
+    font-weight: bold;
+
 }
+
 .button-div{
     width: 100%;
     height: 10vh;
     display: flex;
     align-items: center;
+    
     justify-content: center;
+}
+.description{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    font-family: 'Lobster', cursive;
+    font-style: italic;
+    letter-spacing: 2px;
+    text-align: center;
+
 }
 
 
@@ -76,6 +93,8 @@ nav{
     display: flex;
     flex-direction: column;
     align-items: center;
+    display: none;
+
     
 }
 .header{
@@ -104,5 +123,21 @@ nav{
     }
     .button-div{
         height: 12vh;
+    }
+}
+
+.toggle{
+    display: flex;
+}
+
+@media screen and (max-width: 700px)  {
+    .links {
+        width: 200px;
+    }
+    .links li a{
+        letter-spacing: 1px;
+    }
+    .links li{
+        margin: 0 6px;
     }
 }
