--- a/6-Questions/styles.css
+++ b/6-Questions/styles.css
@@ -10,7 +10,7 @@ body{
 .container{
 width: 50%;
 position: absolute;
-top: 10%;
+top: 20%;
 left: 50%;
 transform: translate(-50%);
 display: flex;
@@ -21,7 +21,7 @@ align-items: center;
 }
 h1{
   margin-bottom: 55px;
-  font-size: 2rem;
+  font-size: 3rem;
   font-family: "Open Sans", sans-serif;
   font-family:  "Roboto", sans-serif;
   letter-spacing: 3px;
@@ -37,6 +37,7 @@ h1{
   border-bottom: 2px solid white;
   /* margin-bottom: 10px; */
   color: white;
+  position: relative;
   
 }
 section{
@@ -56,7 +57,37 @@ section{
   display: none;
   
 }
-
+button{
+  background: transparent;
+  border: none;
+  color: white;
+  font-size: 1.5rem;
+}
+.btnhiden1 , .btnhiden2 , .btnhiden3{
+  position: absolute;
+  right:12.4%;
+  color: white;
+  display: none;
+}
 .active{
   display: block;
 }
+.remove{
+  display: none;
+}
+
+@media screen and (max-width: 650px) {
+  
+  .container1{
+    width: 80%;
+    margin: auto;
+  }
+  .hiddentext1, .hiddentext2 , .hiddentext3{
+    width: 80%;
+    margin: auto;
+  }
+  .btnhiden{
+    right: 9.2%;
+  }
+}
+
