--- a/6-Questions/styles.css
+++ b/6-Questions/styles.css
@@ -5,7 +5,9 @@
 }
 body{
   background-color: rgb(24, 19, 19);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 
 .container{
 width: 50%;
@@ -27,16 +29,17 @@ h1{
   letter-spacing: 3px;
   color: white;
 }
+
 .container1{
   display: flex;
   width: 100%;
   height: 55px;
-  background-color: rebeccapurple;
+  background-color: palevioletred;
   align-items: center;
   justify-content: space-around;
   border-bottom: 2px solid white;
   /* margin-bottom: 10px; */
-  color: white;
+  color: black;
   position: relative;
   
 }
@@ -46,7 +49,7 @@ section{
   width: 600px;
 }
 
-.hiddentext1, .hiddentext2 , .hiddentext3{
+.hiddentext{
   text-align: start;
   font-size: 18px;
   font-family:   "Roboto", sans-serif ;
@@ -63,17 +66,25 @@ button{
   color: white;
   font-size: 1.5rem;
 }
-.btnhiden1 , .btnhiden2 , .btnhiden3{
+
+.btnhiden{
   position: absolute;
-  right:12.4%;
+  right:11.8%;
   color: white;
-  display: none;
-}
-.active{
+ /* display: none;  */
+} 
+
+.showAll .btnhiden {
   display: block;
+  top: 12px
 }
-.remove{
+
+.showAll .clickbtn{
   display: none;
+}
+
+.showAll .hiddentext{
+  display: block;
 }
 
 @media screen and (max-width: 650px) {
@@ -82,12 +93,12 @@ button{
     width: 80%;
     margin: auto;
   }
-  .hiddentext1, .hiddentext2 , .hiddentext3{
+  .hiddentext{
     width: 80%;
     margin: auto;
   }
   .btnhiden{
-    right: 9.2%;
+    right: 8.8%;
   }
 }
 
