--- a/7-Menue/styles.css
+++ b/7-Menue/styles.css
@@ -74,6 +74,7 @@ body {
   line-height: 1.5;
   font-size: 0.875rem;
 }
+
 ul {
   list-style-type: none;
 }
@@ -85,6 +86,8 @@ img:not(.logo) {
 }
 img {
   display: block;
+  border-radius: 10px;
+  border: 0.25rem solid var(--clr-gold);
 }
 
 h1,
