--- a/7-Menue/styles.css
+++ b/7-Menue/styles.css
@@ -69,7 +69,7 @@ Global Styles
 }
 body {
   font-family: var(--ff-secondary);
-  background: var(--clr-grey-10);
+  background: #1e2022;
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
@@ -99,6 +99,9 @@ h4 {
   line-height: 1.25;
   margin-bottom: 0.75rem;
   font-family: var(--ff-primary);
+}
+h4, h2{
+  color: white;
 }
 h1 {
   font-size: 3rem;
