--- a/11-CountDown-Timer/styles.css
+++ b/11-CountDown-Timer/styles.css
@@ -11,6 +11,7 @@ Variables
 ===============
 */
 
+
 :root {
   /* dark shades of primary color*/
   --clr-primary-1: hsl(205, 86%, 17%);
@@ -229,4 +230,8 @@ Countdown Timer
   font-size: 2rem;
   margin-bottom: 0.25rem;
   letter-spacing: var(--spacing);
+}
+h3{
+  color:#c59d5f;
+  font-size: 25px;
 }
