--- a/15-quiz-app/style.css
+++ b/15-quiz-app/style.css
@@ -50,6 +50,79 @@ margin-bottom: 4rem;
 }
 
 
+/* QUIZ APP */
+.quiz{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+}
+.quiz .center-container{
+    width: 80%;
+    margin: auto;
+}
+
+.quiz .container-top{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+}
+#proggress{
+    width: 200px;
+    height: 30px;
+    border: 1px solid rgb(51, 244, 51);
+    background-color: transparent;
+    border-radius: 50px;
+    margin-top: 1rem;
+}
+.container-choses{
+    width: 100%;
+    background-color: rgb(18, 92, 255);
+    margin: 1.5rem 0;
+    display: flex;
+    gap: 0 50px;
+    padding: 1rem;
+    border-radius: 10px;
+}
+.quiz p{
+    font-size: 1rem;
+    font-weight: bold;
+}
+.quiz .container-choses:hover{
+    transform: scale(1.03);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
