--- a/15-quiz-app/style.css
+++ b/15-quiz-app/style.css
@@ -133,12 +133,22 @@ margin-bottom: 4rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
+.containerResult .savedAlert{
+    position: absolute;
+    top: 120px;
+    background-color: red;
+    width: 100%;
+    text-align: center;
+    padding: 6px 0;
+}
+
 form{
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+     align-items: center;
 }
 input{
     margin-bottom: 1rem;
@@ -153,7 +163,40 @@ input{
     padding: 15px 65px;
 }
 
+/* HIGH SCORES */
 
+.scoresContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 150px;
+}
+.scoresContainer h1{
+    margin-bottom: 25px;
+}
+.scoresContainer button{
+    padding: 10px 20px;
+    background-color:transparent;
+    border-color: rgb(8, 114, 244);
+    border: 2px solid rgb(18, 92, 255);
+    border-radius: 5px;
+    transition: transform 0.25s ease-in-out;
+    font-weight: bold;
+}
+.scoresContainer button:hover{
+    transform: scale(1.2);
+    background-color: rgb(18, 92, 255);
+}
+.scoresContainer ul{
+    margin-bottom: 2rem;
+}
+.scoresContainer li{
+    width: 300px;
+    padding: 10px;
+    background-color: rgb(18, 92, 255);
+    margin: 10px 0;
+    font-size: 30px;
+}
 
 
 
