--- a/17-Button Ripple/style.css
+++ b/17-Button Ripple/style.css
@@ -21,6 +21,7 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     position: relative;
     border-radius: 5px;
+    overflow: hidden;
    
 }
 .btn::before{
@@ -36,10 +37,11 @@ body{
 }
 .ribble{
     position:relative;
-    z-index: 2;
+    z-index: 1;
 }
 
-.btn:hover::before{
-    width: 100%;
-    height: 100%;
-}
+
+.btn:hover::before {
+    width: 300px;
+    height: 300px;
+  }
