--- a/17-Button Ripple/18-Recipe APP/style.css
+++ b/17-Button Ripple/18-Recipe APP/style.css
@@ -22,8 +22,46 @@ img{
 }
 
 .header{
+    padding: 0 30px;
     width:100%;
     display: flex;
     height: 60px;
     background-color: white;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3);
+}
+
+.logo img{
+    width: 100px;
+}
+.search{
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
+.search input{
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
+    /* display: none; */
+    width: 0;
+    height: 0;
+    border: none;
+    transition: width 0.6s ease-in ;
+}
+
+.search:hover input{
+    width: 200px;
+    border-bottom: 1px solid black;
+}
+.header  .search iconify-icon{
+    font-size: 18px;
+    color: red;
+    font-weight: bold;
+}
+.header .menu{
+    font-size: 22px;
 }
