--- a/18-Recipe APP/style.css
+++ b/18-Recipe APP/style.css
@@ -39,7 +39,9 @@ img {
 }
 .search {
   display: flex;
+  flex-direction: column-reverse;
   height: 100%;
+  justify-content: center;
   align-items: center;
 }
 
@@ -49,11 +51,11 @@ img {
   outline: none;
   width: 150px;
   height: 0px;
-
   border: none;
-  transition: width 0.6s ease-in;
+
   border-bottom: 2px solid black;
   display: none;
+  transition: display 1s ease-in;
 }
 .search .showSearch {
   display: inline-block;
