--- a/18-Recipe APP/style.css
+++ b/18-Recipe APP/style.css
@@ -212,6 +212,8 @@ img {
   background-color: white;
   padding: 2px 20px;
   padding-left: 20px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .recipe .img .mealtitle {
   color: black;
