--- a/18-Recipe APP/style.css
+++ b/18-Recipe APP/style.css
@@ -70,7 +70,7 @@ img {
 .Favorites {
   width: 100%;
   background-color: rgb(229, 242, 242);
-  background-color: #d3a08a;
+  background-color: #dddad9;
 }
 .fav-container {
   height: 150px;
