--- a/18-Recipe APP/style.css
+++ b/18-Recipe APP/style.css
@@ -199,6 +199,8 @@ img {
   font-size: 24px;
   position: absolute;
   right: 60px;
+  color: black;
+  font-size: 3rem;
 }
 .recipe .img {
   position: relative;
