--- a/18-Recipe APP/style.css
+++ b/18-Recipe APP/style.css
@@ -186,6 +186,9 @@ img {
   align-items: center;
   padding-left: 1rem;
 }
+.recipe .icon:hover {
+  <i class="fa-solid fa-heart"></i>
+}
 .recipe h3 {
   opacity: 0.7;
 }
@@ -195,12 +198,16 @@ img {
   padding: 0 0.2rem;
   font-size: 14px;
 }
+.recipe .textMeal {
+  position: relative;
+}
 .recipe .icon {
   font-size: 24px;
   position: absolute;
-  right: 60px;
-  color: black;
-  font-size: 3rem;
+  right: 30px;
+  top: 20px;
+  /* color: black;
+  font-size: 3rem; */
 }
 .recipe .img {
   position: relative;
