--- a/17-Notes-app/style.css
+++ b/17-Notes-app/style.css
@@ -25,7 +25,7 @@ body {
   border-right: 3px solid rgba(155, 154, 154, 0.384);
 }
 button {
-  padding: 1rem 7rem;
+  padding: 1rem 7.5rem;
   background-color: rgb(48, 167, 48);
   border: none;
   border-radius: 0.3rem;
@@ -44,4 +44,7 @@ button {
 }
 .date {
   float: right;
+  opacity: 0.6;
 }
+
+/* inputNOte */
