--- a/17-Notes-app/style.css
+++ b/17-Notes-app/style.css
@@ -10,7 +10,7 @@ body {
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 400px 1fr;
+  grid-template-columns: 300px 1fr;
 }
 .noteText {
   display: flex;
@@ -19,13 +19,14 @@ body {
 .noteText input,
 .noteText textarea {
   border: none;
+  s
 }
 .left {
-  padding: 2rem;
+  padding: 2rem 1rem;
   border-right: 3px solid rgba(155, 154, 154, 0.384);
 }
 button {
-  padding: 1rem 7.5rem;
+  padding: 1rem 5rem;
   background-color: rgb(48, 167, 48);
   border: none;
   border-radius: 0.3rem;
@@ -48,3 +49,11 @@ button {
 }
 
 /* inputNOte */
+.noteText {
+  padding: 2.5rem;
+}
+.noteText input {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
