--- a/17-Notes-app/style.css
+++ b/17-Notes-app/style.css
@@ -83,3 +83,11 @@ article:hover::-webkit-scrollbar-thumb,
 }
 
 /* notepopup */
+.notepopup {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
