--- a/17-Notes-app/style.css
+++ b/17-Notes-app/style.css
@@ -7,6 +7,8 @@ body {
   background-color: #88abff;
   width: 100%;
   font-family: sans-serif;
+  position: relative;
+  overflow: hidden;
 }
 .container {
   width: 90%;
@@ -84,10 +86,72 @@ article:hover::-webkit-scrollbar-thumb,
 
 /* notepopup */
 .notepopup {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  height: 100%;
   width: 100%;
-  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(255, 255, 255, 0.473);
+}
+.display {
+  display: none;
+}
+.containerNOte {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 6px;
+}
+
+.titleholder,
+.buttoncontent {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.titleholder {
+  flex-direction: row;
+  justify-content: space-between;
+}
+.titleholder iconify-icon {
+  font-size: 1.5rem;
+}
+.titleholder h2 {
+  color: #88abff;
+  font-family: monospace;
+}
+.buttoncontent h3 {
+  margin-bottom: 6px;
+  font-family: monospace;
+}
+.buttoncontent input {
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.233);
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+}
+.buttoncontent textarea {
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.233);
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.buttoncontent button {
+  align-self: center;
+  padding: 0.6rem 6rem;
+  font-size: 1.8rem;
+  background-color: #6a93f8;
+  border: none;
+  border-radius: 6px;
+  color: #f1f1f1;
+  font-weight: bold;
+  margin-bottom: 1rem;
 }
