--- a/17-Notes-app/style.css
+++ b/17-Notes-app/style.css
@@ -8,7 +8,7 @@ body {
   width: 100%;
   font-family: sans-serif;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .container {
   width: 90%;
