--- a/18- upload or drag & drop file /style.css
+++ b/18- upload or drag & drop file /style.css
@@ -9,14 +9,43 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(135, 207, 235, 0.199);
-  padding: 4rem;
-  border-radius: 6px;
+  background-color: rgba(220, 235, 135, 0.664);
+  padding: 2rem 4rem;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  border: dotted 0.4px black;
+}
+body {
+  background-color: rgba(71, 61, 139, 0.192);
+}
+h1 {
+  margin-top: 1rem;
+  font-family: sans-serif;
+}
+p {
+  margin: 0.4rem 0;
+  font-size: 1.2rem;
 }
 .dragZone {
+  border-radius: 10px;
+  margin-top: 1rem;
+  min-width: 500px;
+  height: 200px;
+  background-color: rgba(255, 255, 255, 0.493);
+  border: dashed 2px rgb(32, 25, 13);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+iconify-icon {
+  font-size: 6rem;
+}
+.dragZone p {
+  font-size: 1.5rem;
 }
