--- a/18- upload or drag & drop file /style.css
+++ b/18- upload or drag & drop file /style.css
@@ -19,6 +19,9 @@
   text-align: center;
   border: dotted 0.4px black;
 }
+.background {
+  background-color: black;
+}
 body {
   background-color: rgba(71, 61, 139, 0.192);
 }
