--- a/18- upload or drag & drop file /style.css
+++ b/18- upload or drag & drop file /style.css
@@ -1,54 +1,16 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(133, 148, 50, 0.664);
-  padding: 2rem 4rem;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: dotted 0.4px black;
-}
-.background {
-  background-color: rgba(146, 153, 106, 0.664);
-}
-body {
-  background-color: rgba(71, 61, 139, 0.192);
-}
-h1 {
-  margin-top: 1rem;
-  font-family: sans-serif;
-}
-p {
-  margin: 0.4rem 0;
-  font-size: 1.2rem;
-}
-.dragZone {
-  border-radius: 10px;
-  margin-top: 1rem;
-  min-width: 500px;
+.drop-zone {
+  max-width: 200px;
   height: 200px;
-  background-color: rgba(255, 255, 255, 0.493);
-  border: dashed 2px rgb(32, 25, 13);
+  padding: 25px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  gap: 0.5rem;
-}
-iconify-icon {
-  font-size: 6rem;
-}
-.dragZone p {
-  font-size: 1.5rem;
+  justify-content: center;
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+  color: #cccccc;
+  border: 4px dashed #009578;
+  border-radius: 10px;
 }
