--- a/18- upload or drag & drop file /style.css
+++ b/18- upload or drag & drop file /style.css
@@ -14,3 +14,11 @@
   border: 4px dashed #009578;
   border-radius: 10px;
 }
+
+.drop-zone--over {
+  border-style: solid;
+}
+
+.drop-zone__input {
+  display: none;
+}
