--- a/18- upload or drag & drop file /style.css
+++ b/18- upload or drag & drop file /style.css
@@ -22,3 +22,13 @@
 .drop-zone__input {
   display: none;
 }
+
+.drop-zone__thumb {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #cccccc;
+  background-size: cover;
+  position: relative;
+}
