--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -23,4 +23,10 @@ body {
 }
 .QuoteHeader h1 {
   font-size: 2.5rem;
+  font-weight: 600px;
+}
+
+.qoutetext {
+  display: flex;
+  justify-content: center;
 }
