--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -31,11 +31,18 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
+  margin: 30px 0;
 }
 .qoutetext p {
   font-size: 1.5rem;
 }
-.qoutetext:nth-child(1) {
-  font-size: 3rem;
-  color: red;
+.qoutetext .right {
+  display: flex;
+  align-self: flex-end;
+  margin-left: 10px;
+  font-size: 1.5rem;
+}
+.qoutetext .left {
+  font-size: 1.5rem;
+  margin-right: 10px;
 }
