--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -60,3 +60,41 @@ body {
 .quoteAuthor:nth-child(1) {
   color: red;
 }
+
+.features {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.features .effects {
+  display: flex;
+  gap: 30px;
+}
+.features .effects p {
+  padding: 10px;
+  border: 1px solid #5372f0;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #5372f0;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.features .effects p:hover {
+  color: white;
+  background-color: #5372f0;
+}
+
+button {
+  padding: 12px 16px;
+  border-radius: 10px;
+  border: none;
+  background-color: #5372f0;
+  font-size: 1rem;
+  color: white;
+  cursor: pointer;
+}
+.author {
+}
