--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -30,6 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 30px 0;
+  border-bottom: 1.5px solid rgba(0, 0, 0, 0.308);
 }
 .qoutetext {
   display: flex;
@@ -53,9 +54,16 @@ body {
   display: flex;
   margin-top: 15px;
   align-self: end;
+  font-size: 1.2rem;
+  font-style: italic;
+  margin-bottom: 50px;
 }
 .quoteAuthor .author {
   margin: 0 6px;
+}
+.line {
+  margin: -7px 3px 0 0;
+  font-weight: bold;
 }
 .quoteAuthor:nth-child(1) {
   color: red;
@@ -89,12 +97,11 @@ body {
 
 button {
   padding: 12px 16px;
-  border-radius: 10px;
+  border-radius: 125px;
   border: none;
   background-color: #5372f0;
   font-size: 1rem;
   color: white;
   cursor: pointer;
-}
-.author {
+  font-weight: bold;
 }
