--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -110,3 +110,14 @@ button {
   opacity: 0.7;
   pointer-events: none;
 }
+
+.loader {
+  background: #000
+    url("https://cdn.dribbble.com/users/664475/screenshots/5411820/dribbble.gif")
+    no-repeat center center;
+  background-size: 30%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
