--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -141,8 +141,8 @@ button {
 .copied iconify-icon {
   margin-left: 3px;
 }
-
-/* @media screen and (max-width: 768px) {
+/* 
+/* @media screen and (max-width: 600px) {
   .QuoteContianer {
     width: 350px;
   }
@@ -150,4 +150,4 @@ button {
     font-size: 1.5rem;
   }
   .qouteContent p
-} */
+} */ */
