--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -144,6 +144,7 @@ button {
 @media screen and (max-width: 600px) {
   .QuoteContianer {
     width: 350px;
+    max-height: 350px;
   }
   .QuoteHeader h1 {
     font-size: 1.5rem;
