--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -152,4 +152,11 @@ button {
   .qoutetext .qoute {
     font-size: 1.1rem;
   }
+  .quoteAuthor .author {
+    font-size: 1rem;
+    margin: 0;
+  }
+  .features .effects p {
+    font-size: 1rem;
+  }
 }
