--- a/19-Quote Generator/style.css
+++ b/19-Quote Generator/style.css
@@ -168,11 +168,18 @@ button {
   }
   button {
     padding: 10px 10px;
+    font-size: 16px;
+    border-radius: 6px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
   .quoteAuthor {
     margin-bottom: 25px;
   }
   .qouteContent {
     margin-bottom: 10px;
+  }
+  .qoutetext .left,
+  .qoutetext .right {
+    font-size: 1rem;
   }
 }
