--- a/20-Weather-Api/style.css
+++ b/20-Weather-Api/style.css
@@ -49,6 +49,13 @@ input {
   box-shadow: 5px 4px 30px 1px rgba(0, 0, 0, 0.6);
   padding: 75px 15px 10px 15px;
   color: white;
+  position: relative;
+}
+.showIcon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 100px;
 }
 .city {
   font-size: 1.6rem;
