--- a/20-Weather-Api/style.css
+++ b/20-Weather-Api/style.css
@@ -107,3 +107,13 @@ input {
 .right {
   gap: 15px;
 }
+
+.smallweather {
+  position: relative;
+}
+.circle {
+  position: absolute;
+  top: -6px;
+  right: -7px;
+  font-size: 5px;
+}
