--- a/20-Weather-Api/style.css
+++ b/20-Weather-Api/style.css
@@ -106,6 +106,11 @@ input {
 }
 .right {
   gap: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  align-content: center;
 }
 
 .smallweather {
@@ -116,4 +121,7 @@ input {
   top: -6px;
   right: -7px;
   font-size: 5px;
+}
+.iconcade {
+  width: 25px;
 }
