--- a/20-Weather-Api/style.css
+++ b/20-Weather-Api/style.css
@@ -22,18 +22,31 @@ body {
   font-family: sans-serif;
   text-align: center;
 }
-input {
-  padding: 10px 0 10px 20px;
-  width: 300px;
+form {
   background-color: white;
-  border-radius: 20px;
   border: none;
   outline: none;
-  font-size: 1.2rem;
   color: #000000af;
   font-family: monospace;
   margin-bottom: 2rem;
   margin-top: 0.4rem;
+  border-radius: 20px;
+}
+input {
+  border: none;
+  font-size: 1.2rem;
+  padding: 10px;
+  border-radius: 20px;
+}
+button {
+  background-color: #5372f0;
+  font-size: 1.2rem;
+  border-radius: 20px;
+  border: none;
+  padding: 11px 15px;
+  color: white;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
 }
 .display {
   width: 60%;
