--- a/20-Weather-Api/style.css
+++ b/20-Weather-Api/style.css
@@ -31,12 +31,14 @@ form {
   margin-bottom: 2rem;
   margin-top: 0.4rem;
   border-radius: 20px;
+  margin-bottom: 5.3rem;
 }
 input {
   border: none;
   font-size: 1.2rem;
-  padding: 10px;
+  padding: 10px 20px;
   border-radius: 20px;
+  outline: none;
 }
 button {
   background-color: #5372f0;
@@ -57,7 +59,7 @@ button {
   background: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQV0KgyKCveeicSzq2NckjBWw5biCOevfTInobESvLTy2WjR80c")
     no-repeat center center;
   background-size: cover;
-  height: 70vh;
+  max-height: 90vh;
   border-radius: 5px;
   box-shadow: 5px 4px 30px 1px rgba(0, 0, 0, 0.6);
   padding: 75px 15px 10px 15px;
