--- a/20-Weather-Api/style.css
+++ b/20-Weather-Api/style.css
@@ -11,7 +11,17 @@ body {
     no-repeat center center;
   background-size: cover;
 }
-
+/* .loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: url("https://i.pinimg.com/originals/e9/29/1e/e9291eaddacd460280a34a151dcc5cc4.gif")
+    no-repeat center rgb(31, 31, 53);
+  background-size: 20%;
+  /* background-color: hsl(0, 0%, 90%); */
 .weatherin {
   width: 100%;
   display: flex;
