--- a/20-Weather-Api/style.css
+++ b/20-Weather-Api/style.css
@@ -11,18 +11,19 @@ body {
     no-repeat center center;
   background-size: cover;
 }
-/* .loader {
+.loader {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
   z-index: 10;
-  background: url("https://i.pinimg.com/originals/e9/29/1e/e9291eaddacd460280a34a151dcc5cc4.gif")
+  background: url("https://wpamelia.com/wp-content/uploads/2018/11/ezgif-2-6d0b072c3d3f.gif")
     no-repeat center rgb(31, 31, 53);
-  background-size: 20%;
-  background-color: #071e26;
-} */
+  background-size: 90%;
+  background-color: #fff;
+  display: none;
+}
 .weatherin {
   width: 100%;
   display: flex;
