--- a/21-Speed Test Game/style.css
+++ b/21-Speed Test Game/style.css
@@ -6,6 +6,7 @@
 
 body {
   width: 100%;
+  font-family: sans-serif;
 }
 nav {
   width: 100%;
@@ -30,10 +31,34 @@ nav {
 }
 
 h4 {
-  font-family: sans-serif;
   font-size: 1.5rem;
   margin: 4rem 0 1rem 0;
 }
 h4 span {
   color: greenyellow;
+}
+h1 {
+  letter-spacing: 5.5px;
+  margin: 1rem 0;
+}
+
+input {
+  padding: 10px 15px;
+  width: 300px;
+  margin-bottom: 1rem;
+  border-radius: 4px;
+  font-size: 1.1rem;
+  outline: none;
+}
+h2 {
+  letter-spacing: 1.5px;
+  margin-top: 1rem;
+}
+
+.time-counter {
+  display: flex;
+  margin: 1rem 0;
+  width: 250px;
+  justify-content: space-between;
+  font-size: 1.4rem;
 }
