--- a/21-Speed Test Game/style.css
+++ b/21-Speed Test Game/style.css
@@ -23,9 +23,41 @@ body {
   padding: 20px;
 }
 .text {
-  font-size: 23px;
-  font-family: pop;
+  font-size: 21px;
+  font-family: sans-serif;
   letter-spacing: 1.3px;
   line-height: 140%;
   margin-bottom: 20px;
+}
+.Rules {
+  border-top: 1px solid #ccc;
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+}
+.stats {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.timeleft {
+  font-size: 20px;
+  font-family: sans-serif;
+}
+.timeleft span {
+  font-weight: bold;
+}
+
+button {
+  padding: 10px 15px;
+  margin-top: 10px;
+  background-color: #17a2b8;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 19px;
+  font-weight: bold;
 }
