--- a/21-Speed Test Game/style.css
+++ b/21-Speed Test Game/style.css
@@ -63,8 +63,11 @@ button {
 }
 
 .correct {
-  color: rgb(73, 192, 73);
+  color: #56964f;
 }
 .incorrect {
-  background-color: rgb(235, 51, 51);
+  color: #cb3439;
+  outline: 1px solid #fff;
+  background: pink;
+  border-radius: 4px;
 }
