--- a/English Dictionary/style.css
+++ b/English Dictionary/style.css
@@ -18,15 +18,19 @@ body {
   border-radius: 6px;
 }
 .header {
-  text-align: center;
+  height: 90px;
+  display: flex;
+}
+.header h1 {
+  margin: auto;
 }
 form {
   display: flex;
   width: 100%;
   justify-content: space-between;
   margin-top: 1rem;
-  border: 1px #4d59fb solid;
-  padding: 10px 4px;
+  border: 1px rgb(187, 185, 185) solid;
+  padding: 20px 10px;
   border-radius: 5px;
   align-items: center;
   margin-bottom: 1rem;
@@ -42,8 +46,16 @@ input {
   font-size: 21px;
   outline: none;
 }
+input::placeholder {
+  opacity: 0.5;
+  font-family: "Poppins", sans-serif;
+}
 .btnsrch iconify-icon {
   font-size: 21px;
+  opacity: 0.5;
+}
+.cancel {
+  display: none;
 }
 .cancel iconify-icon {
   font-size: 21px;
@@ -51,4 +63,6 @@ input {
 .note {
   opacity: 0.6;
   font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 10px;
 }
