--- a/22-English Dictionary/style.css
+++ b/22-English Dictionary/style.css
@@ -50,7 +50,18 @@ input {
   border: none;
   font-size: 21px;
   outline: none;
+  padding: 8px 8px;
+  background: white;
+  background-color: white;
+  width: 100%;
+  fill: none;
 }
+/* input:-internal-autofill-selected {
+  appearance: menulist-button;
+  background-image: none !important;
+  background-color: white;
+  color: white !important;
+} */
 input::placeholder {
   opacity: 0.5;
   font-family: "Poppins", sans-serif;
@@ -110,16 +121,22 @@ input::placeholder {
 .example {
   margin: 15px 0;
   border-left: 5px solid #4d59fb;
-  border-radius: 10px;
+  border-radius: 6px;
   padding: 5px 0;
   padding-left: 10px;
 }
-
+.meaning h2,
+.example h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  letter-spacing: 1.2px;
+}
 .meaning h4,
 .example h4 {
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
   color: rgba(128, 128, 128, 0.808);
   font-weight: 500;
+  line-height: 155%;
 }
 /* .example {
   border: 2px solid #4d59fb;
