--- a/23-Memory Card Game/style.css
+++ b/23-Memory Card Game/style.css
@@ -38,6 +38,10 @@ body {
 .memory-card.flip {
   transform: rotateY(180deg);
 }
+.back-face {
+  display: flex;
+  justify-content: center;
+}
 
 .front-face,
 .back-face {
